# imageproc

./: .clang-format  CMakeLists.txt
include/base/: blur.h  deblur.h  detectbrigthedge.h  drawcontours.h  histogramequalization.h  linearfilter.h  remapping.h  show.h  threshold.h
include/base/interface/: anchorpoint.h  kernelsize.h  operation.h  operationtype.h  snrinterface.h  thresholdinterface.h
include/execute/: process.h  wrapper.h
include/execute/internal/: baseprocess.h
include/functions/: default.h
include/settings/: arguments.h  cmdoptions.h  messages.h
include/settings/internal/: types.h
include/settings/parser/: detectbrightedge_t.h  parserblur_t.h  parserdeblur_t.h  parserdetectbrightedge_t.h  parserdrawcontours_t.h  parserhistogramequalization_t.h  parserlinearfilter_t.h  parserremapping_t.h  parsershow_t.h  parserthreshold_t.h
src/: main.cpp
src/base/: blur.cpp  deblur.cpp  detectbrigthedge.cpp  drawcontours.cpp  histogramequalization.cpp  linearfilter.cpp  remapping.cpp  show.cpp  threshold.cpp
src/base/interface/: anchorpoint.cpp  kernelsize.cpp  operation.cpp  operationtype.cpp  snrinterface.cpp  thresholdinterface.cpp
src/execute/: process.cpp  wrapper.cpp
src/execute/internal/: baseprocess.cpp
src/functions/: default.cpp
src/settings/: arguments.cpp
src/settings/parser/: detectbrightedge_t.cpp  parserblur_t.cpp  parserdeblur_t.cpp  parserdetectbrightedge_t.cpp  parserdrawcontours_t.cpp  parseremapping_t.cpp  parserhistogramequalization_t.cpp  parserlinearfilter_t.cpp  parserremapping_t.cpp  parsershow_t.cpp  (+1 more)
(+2 files in other folders)
